# TemplateStudy

./: README.md
BasicKnowledge/: .gitignore  CMakeLists.txt  PerfectForward.hpp  main.cpp
BasicKnowledge/Tracer/: CMakeLists.txt
BasicKnowledge/UT/: CMakeLists.txt  TestForward.cpp
BasicKnowledge/argument_deduction_demo/: ArgumentDeductionDemo.cpp  CMakeLists.txt
BasicKnowledge/doc/: TemplateArgumentDeduction.md  TemplateParameterDeduction.md
BasicKnowledge/parameter_deduce_demo/: CMakeLists.txt  ParameterDeduceDemo.cpp
BasicKnowledge/perfect_forward_demo/: CMakeLists.txt  PerfectForwardDemo.cpp
BasicKnowledge/tracer_lib/: CMakeLists.txt  Tracer.cpp  Tracer.hpp
BasicKnowledge/type_traits_demo/: CMakeLists.txt  TypeTraitsDemo.cpp
IteratorDispatch/: .gitignore  CMakeLists.txt
MyFunctor/: CMakeLists.txt
MyFunctor/Step1/: BasicFunctor.cpp
MyFunctor/Step2/: FunctorWithVariadicTemplate.cpp
MyFunctor/Step3/: FullFunctor.cpp
MyFunctor/Step4/: FinalFunctor.cpp
MyFunctor/inc/: FinalFunctor.hpp  FinalFunctorWithTraits.hpp  FunctorWithVariadicTemplate.hpp  FunctorWithoutTemplate.hpp
Tuple/: CMakeLists.txt
Tuple/inc/: MySort.hpp  MyTuple.hpp  MyTupleV2.hpp
Tuple/src/: main.cpp
Tuple/ut/: MySortUnitTest.cpp  TupleUnitTest.cpp
TypeList/: CMakeLists.txt  TypeList.hpp  main.cpp
TypeList/UT/: CMakeLists.txt  TypeListTest.cpp
Variant/: CMakeLists.txt  myVariant.hpp
Variant/UT/: CMakeLists.txt  variantTest.cpp
